# ideal-meme

./: Dockerfile  Makefile  README.md  entrypoint.sh
.devcontainer/: devcontainer.json
lambda/: index.ts
pipeline/: app.py  pyproject.toml
pipeline/pipeline/: lambda_stack.py  pipeline_stack.py
